[gd_scene load_steps=81 format=2]

[ext_resource path="res://Assets/BlueWizard/2BlueWizardIdle/Chara - BlueIdle00001.png" type="Texture" id=1]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardIdle/Chara - BlueIdle00002.png" type="Texture" id=2]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardIdle/Chara - BlueIdle00000.png" type="Texture" id=3]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardIdle/Chara - BlueIdle00005.png" type="Texture" id=4]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardIdle/Chara - BlueIdle00006.png" type="Texture" id=5]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardIdle/Chara - BlueIdle00007.png" type="Texture" id=6]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardIdle/Chara - BlueIdle00009.png" type="Texture" id=7]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardIdle/Chara - BlueIdle00010.png" type="Texture" id=8]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardIdle/Chara - BlueIdle00011.png" type="Texture" id=9]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardIdle/Chara - BlueIdle00012.png" type="Texture" id=10]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardIdle/Chara - BlueIdle00013.png" type="Texture" id=11]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardIdle/Chara - BlueIdle00014.png" type="Texture" id=12]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardIdle/Chara - BlueIdle00015.png" type="Texture" id=13]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardIdle/Chara - BlueIdle00016.png" type="Texture" id=14]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardIdle/Chara - BlueIdle00017.png" type="Texture" id=15]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardIdle/Chara - BlueIdle00018.png" type="Texture" id=16]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardIdle/Chara - BlueIdle00004.png" type="Texture" id=17]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardIdle/Chara - BlueIdle00019.png" type="Texture" id=18]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardIdle/Chara - BlueIdle00003.png" type="Texture" id=19]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardIdle/Chara - BlueIdle00008.png" type="Texture" id=20]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardJump/CharaWizardJump_00005.png" type="Texture" id=21]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardJump/CharaWizardJump_00006.png" type="Texture" id=22]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardJump/CharaWizardJump_00007.png" type="Texture" id=23]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardJump/CharaWizardJump_00003.png" type="Texture" id=24]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardJump/CharaWizardJump_00004.png" type="Texture" id=25]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardJump/CharaWizardJump_00000.png" type="Texture" id=26]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardJump/CharaWizardJump_00001.png" type="Texture" id=27]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardJump/CharaWizardJump_00002.png" type="Texture" id=28]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardWalk/Chara_BlueWalk00001.png" type="Texture" id=29]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardJump/Dash2/DashBlue_00004.png" type="Texture" id=30]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardJump/Dash2/DashBlue_00000.png" type="Texture" id=31]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardWalk/Chara_BlueWalk00003.png" type="Texture" id=32]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardWalk/Chara_BlueWalk00004.png" type="Texture" id=33]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardWalk/Chara_BlueWalk00007.png" type="Texture" id=34]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardJump/Dash2/DashBlue_00006.png" type="Texture" id=35]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardWalk/Chara_BlueWalk00002.png" type="Texture" id=36]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardWalk/Chara_BlueWalk00000.png" type="Texture" id=37]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardJump/Dash2/DashBlue_00013.png" type="Texture" id=38]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardJump/Dash2/DashBlue_00003.png" type="Texture" id=39]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardJump/Dash2/DashBlue_00015.png" type="Texture" id=40]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardJump/Dash2/DashBlue_00001.png" type="Texture" id=41]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardJump/Dash2/DashBlue_00002.png" type="Texture" id=42]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardJump/Dash2/DashBlue_00008.png" type="Texture" id=43]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardJump/Dash2/DashBlue_00005.png" type="Texture" id=44]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardJump/Dash2/DashBlue_00011.png" type="Texture" id=45]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardJump/Dash2/DashBlue_00007.png" type="Texture" id=46]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardJump/Dash2/DashBlue_00009.png" type="Texture" id=47]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardWalk/Chara_BlueWalk00006.png" type="Texture" id=48]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardWalk/Chara_BlueWalk00005.png" type="Texture" id=49]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardWalk/Chara_BlueWalk00008.png" type="Texture" id=50]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardWalk/Chara_BlueWalk00009.png" type="Texture" id=51]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardWalk/Chara_BlueWalk00010.png" type="Texture" id=52]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardWalk/Chara_BlueWalk00011.png" type="Texture" id=53]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardWalk/Chara_BlueWalk00012.png" type="Texture" id=54]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardWalk/Chara_BlueWalk00013.png" type="Texture" id=55]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardWalk/Chara_BlueWalk00014.png" type="Texture" id=56]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardWalk/Chara_BlueWalk00015.png" type="Texture" id=57]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardWalk/Chara_BlueWalk00016.png" type="Texture" id=58]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardWalk/Chara_BlueWalk00017.png" type="Texture" id=59]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardWalk/Chara_BlueWalk00018.png" type="Texture" id=60]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardWalk/Chara_BlueWalk00019.png" type="Texture" id=61]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardJump/Dash2/DashBlue_00012.png" type="Texture" id=62]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardJump/Dash2/DashBlue_00014.png" type="Texture" id=63]
[ext_resource path="res://Assets/BlueWizard/2BlueWizardJump/Dash2/DashBlue_00010.png" type="Texture" id=64]
[ext_resource path="res://Player/Player.gd" type="Script" id=65]
[ext_resource path="res://Player/PlayerRightRay1.gd" type="Script" id=66]
[ext_resource path="res://Player/PlayerRightRay3.gd" type="Script" id=67]
[ext_resource path="res://Audio/2_Coins.ogg" type="AudioStream" id=68]
[ext_resource path="res://Audio/WHOOSH_ARM_SWING_01.wav" type="AudioStream" id=69]
[ext_resource path="res://Audio/Forest 1.wav" type="AudioStream" id=70]
[ext_resource path="res://Audio/Forest 2.wav" type="AudioStream" id=71]
[ext_resource path="res://Audio/WHOOSH_AIRY_FLUTTER_01.wav" type="AudioStream" id=72]
[ext_resource path="res://Assets/StaminaPie2.png" type="Texture" id=73]
[ext_resource path="res://Hitboxes and Hurtboxes/Hurtbox.tscn" type="PackedScene" id=74]
[ext_resource path="res://Hitboxes and Hurtboxes/Stats.tscn" type="PackedScene" id=75]
[ext_resource path="res://Hitboxes and Hurtboxes/Hitbox.tscn" type="PackedScene" id=76]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 31 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 39 ), ExtResource( 30 ), ExtResource( 44 ), ExtResource( 35 ), ExtResource( 46 ), ExtResource( 43 ), ExtResource( 47 ), ExtResource( 64 ), ExtResource( 45 ), ExtResource( 62 ), ExtResource( 38 ), ExtResource( 63 ), ExtResource( 40 ) ],
"loop": false,
"name": "Dash",
"speed": 60.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 19 ), ExtResource( 17 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 20 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 18 ) ],
"loop": true,
"name": "Idle",
"speed": 15.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ) ],
"loop": false,
"name": "Jump",
"speed": 30.0
}, {
"frames": [ ExtResource( 37 ), ExtResource( 29 ), ExtResource( 36 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 49 ), ExtResource( 48 ), ExtResource( 34 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ) ],
"loop": true,
"name": "Walk",
"speed": 30.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 50.0
height = 68.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 37.5
height = 120.0

[sub_resource type="CapsuleShape2D" id=4]
radius = 52.5
height = 110.0

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 0.4, 0.4 )
script = ExtResource( 65 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -1, 43 )
shape = SubResource( 2 )

[node name="PlayerRightRay1" type="RayCast2D" parent="."]
visible = false
rotation = -1.5708
scale = Vector2( 45, 1.6 )
enabled = true
script = ExtResource( 66 )

[node name="PlayerRightRay2" type="RayCast2D" parent="."]
visible = false
position = Vector2( 0, 20 )
rotation = -1.5708
scale = Vector2( 45, 1.6 )
enabled = true

[node name="PlayerLeftRay1" type="RayCast2D" parent="."]
visible = false
rotation = 1.5708
scale = Vector2( 45, 1.6 )
enabled = true
script = ExtResource( 67 )

[node name="PlayerLeftRay2" type="RayCast2D" parent="."]
visible = false
position = Vector2( 0, 20 )
rotation = 1.5708
scale = Vector2( 45, 1.6 )
enabled = true

[node name="Jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 72 )
volume_db = -9.0
bus = "SFX"

[node name="Dash" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 69 )
volume_db = -9.0
bus = "SFX"

[node name="Walk1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 70 )
bus = "SFX"

[node name="Walk2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 71 )
bus = "SFX"

[node name="StaminaPie" type="TextureProgress" parent="."]
margin_top = -220.0
margin_right = 100.0
margin_bottom = -113.0
value = 50.0
texture_under = ExtResource( 73 )
texture_progress = ExtResource( 73 )
fill_mode = 5
tint_under = Color( 0, 0, 0, 0 )
tint_progress = Color( 0.4, 1, 0.576471, 1 )

[node name="HookSelector" type="RayCast2D" parent="."]
visible = false
scale = Vector2( 20, 19.92 )
enabled = true

[node name="Collectible" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 68 )
pitch_scale = 1.17
bus = "SFX"

[node name="Hurtbox" parent="." instance=ExtResource( 74 )]
collision_layer = 4

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( -2.5, 37.5 )
shape = SubResource( 3 )

[node name="Hitbox" parent="." instance=ExtResource( 76 )]
visible = false
collision_mask = 8

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, 35 )
shape = SubResource( 4 )

[node name="Stats" parent="." instance=ExtResource( 75 )]

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_exited" from="Hurtbox" to="." method="_on_Hurtbox_area_exited"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
